test_src/compiler_errors/types/arithmetic/DecrementBoolError1.b
class DecrementBoolError1 {
    void test() {
        var value = true;
        println(value--);
    }
}
